--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -3,5 +3,5 @@ url = https://demo.opencart.com/index.php?route=account/login
 username = sonamqa89@gmail.com
 password = test@123
 headless = false
-incognito = true
+incognito = false
 highlight = false
