--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -3,5 +3,5 @@ url=https://demo.opencart.com/index.php?route=account/login
 username=khandarerohitrk@gmail.com
 password=test@123
 headless=false
-incognito=false
+incognito=true
 highlight=true
