--- a/src/test/resources/config/stage.config.properties
+++ b/src/test/resources/config/stage.config.properties
@@ -2,6 +2,6 @@ browser = chrome
 url = https://demo.opencart.com/index.php?route=account/login
 username = nidhi.priya17@gmail.com
 password = Selenium@123
-headless = false
-incognito = true
-highlight = false
+headless = true
+incognito = false
+highlight = true
