--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -2,6 +2,6 @@ browser = firefox
 url = https://demo.opencart.com/index.php?route=account/login
 username = sonamqa89@gmail.com
 password = test@123
-headless = false
+headless = true
 incognito = false
 highlight = false
