--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -1,4 +1,4 @@
-browser = firefox
+browser = chrome
 url = https://demo.opencart.com/index.php?route=account/login
 username = sonamqa89@gmail.com
 password = test@123
