--- a/src/test/resources/config/stage.config.properties
+++ b/src/test/resources/config/stage.config.properties
@@ -1,7 +1,7 @@
-browser = chrome
+browser = firefox
 url = https://demo.opencart.com/index.php?route=account/login
 username = nidhi.priya17@gmail.com
 password = Selenium@123
-headless = true
+headless = false
 incognito = false
 highlight = true
