--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,4 @@
-browser = chrome
+browser = firefox
 url=https://demo.opencart.com/index.php?route=account/login
 username=khandarerohitrk@gmail.com
 password=test@123
