--- a/src/test/resources/config/stage.config.properties
+++ b/src/test/resources/config/stage.config.properties
@@ -4,4 +4,4 @@ username = nidhi.priya17@gmail.com
 password = Selenium@123
 headless = false
 incognito = false
-highlight = true
+highlight = false
