--- a/src/test/resources/config/dev.config.properties
+++ b/src/test/resources/config/dev.config.properties
@@ -3,5 +3,5 @@ url = https://demo.opencart.com/index.php?route=account/login
 username = test3101@gmail.com
 password = Test123
 headless = false
-incognito = true
+incognito = false
 highlight = true
