selenoid and docker setup added

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,7 +1,10 @@
 browser = chrome
-url=https://demo.opencart.com/index.php?route=account/login
-username=khandarerohitrk@gmail.com
-password=test@123
-headless=false
-incognito=false
-highlight=true
+url= https://demo.opencart.com/index.php?route=account/login
+username= khandarerohitrk@gmail.com
+password= test@123
+headless= false
+incognito= false
+highlight= true
+
+remote = true
+huburl= http://localhost:4444/wd/hub
