--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,8 @@
 					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 					<suiteXmlFiles>
 						<suiteXmlFile>src/test/resources/testrunner/testng_regression_Chrome.xml</suiteXmlFile>
+						<suiteXmlFile>src/test/resources/testrunner/testng_regression.xml</suiteXmlFile>
+						<suiteXmlFile>src/test/resources/testrunner/testng_regression_Firefox.xml</suiteXmlFile>
 					</suiteXmlFiles>
 					
 					<argLine>
