--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,7 +2,7 @@ browser = chrome
 url= https://demo.opencart.com/index.php?route=account/login
 username= khandarerohitrk@gmail.com
 password= test@123
-headless= false
+headless= true
 incognito= false
 highlight= true
 
