--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,9 +2,9 @@ browser = chrome
 url= https://demo.opencart.com/index.php?route=account/login
 username= khandarerohitrk@gmail.com
 password= test@123
-headless= true
+headless= false
 incognito= false
 highlight= true
 
-remote = false
+remote = true
 huburl= http://localhost:4444/wd/hub
