--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
 		<aspectj.version>1.9.5</aspectj.version>
 
 	</properties>
+	
+	
+	<distributionManagement>
+    <snapshotRepository>
+    <id>nexus-snapshots</id>
+    <url>http://admin:admin123@localhost:8081/repository/maven-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
 	<dependencies>
 
